--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercedes Benz</title>
+    <title>Mercedes </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
     <script src="./js/tabs.js" defer></script>
     <script src="./js/modal.js" defer></script>
     <script src="./js/menu.js" defer></script>
+    <script src="./js/accordeon.js" defer></script>
 </head>
 
 <body>
