--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="./js/modal.js" defer></script>
     <script src="./js/menu.js" defer></script>
     <script src="./js/accordeon.js" defer></script>
+    <script src="./js/timer.js" defer></script>
+    <script src="./js/scroll.js" defer></script>
 </head>
 
 <body>
@@ -361,7 +363,23 @@
             <!-- /.form modal__form -->
         </div>
     </div>
-    <!-- modal (end) -->
+    <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
+    <script>
+        // patch all methods
+        seamless.polyfill();
+        // or use specific methods
+        seamless.scrollBy(window, {
+            behavior: "smooth",
+            top: 200,
+            left: 0
+        });
+
+        seamless.scrollIntoView(document.querySelector("#target"), {
+            behavior: "smooth",
+            block: "center",
+            inline: "center",
+        });
+    </script>
 
 </body>
 
